--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             </a>
           </li>
 
-          <li class="sfooter-item">
+          <li class="footer-item">
             <a href="" class="footer-link">
               <svg class="footer-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-linkedin"></use>
@@ -453,6 +453,18 @@
           </li>
         </ul>
       </div>
+
+      <form class="footer-form">
+        <label class="footer-lable">
+          <p class="footer-title">Підпишіться на розсилку</p>
+          <input class="footer-input" type="email" name="email" placeholder="E-Mail" autocomplete="off"/>
+          <button class="footer-button" type="submit">Підписатися
+            <svg class="footer-svg" width="24px" height="24px">
+              <use href="./images/icons.svg#icon-icon-send"></use>
+            </svg>
+          </button>
+        </label>
+      </form>
     </div>
   </footer>
 
