--- a/portfolio.html
+++ b/portfolio.html
@@ -336,6 +336,19 @@
           </li>
         </ul>
       </div>
+
+      <form class="footer-form">
+        <label class="footer-lable">
+          <p class="footer-title">Підпишіться на розсилку</p>
+          <input class="footer-input" type="email" name="email" placeholder="E-Mail" autocomplete="off" />
+          <button class="footer-button" type="submit">Підписатися
+            <svg class="footer-svg" width="24px" height="24px">
+              <use href="./images/icons.svg#icon-icon-send"></use>
+            </svg>
+          </button>
+        </label>
+      </form>
+      
     </div>
   </footer>
 </body>
