--- a/index.html
+++ b/index.html
@@ -477,6 +477,33 @@
         <use href="./images/icons.svg#icon-close-black"></use>
       </svg>
       </button>
+
+      <form class="form">
+        <p class="form-title">Залиште свої дані, ми вам передзвонимо</p>
+                
+        <label class="label"> Імя
+          <input type="text" name="name">
+        </label>
+
+        <label class="label"> Телефон
+          <input type="tel" name="tel">
+        </label>
+      
+        <label class="label"> Пошта
+          <input type="email" name="email">
+        </label>
+
+        <label class="label"> Коментар
+          <textarea name="коментар" rows="7"></textarea>
+        </label>
+
+        <label class="label"> 
+          <input class="input" type="checkbox" name="checkbox">
+        Погоджуюся з розсилкою та приймаю Умови договору
+        </label>
+
+        <button class="form-button" type="submit">Відправити</button>
+      </form>
   </div>
 </div>
 
