--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
             <use href="./images/icons.svg#icon-icon-check"></use>
           </svg>
         Погоджуюся з розсилкою та приймаю  
-         <span class="form-span">Умови договору</span>
+         <a href="#"><span class="form-span">Умови договору</span></a>
         </label>
 
         <button class="form-button" type="submit">Відправити</button>
